# pyserverless

./: .gitignore  dockerfile  main.py  pyproject.toml
core/: functions.py  helpers.py  packages.py  settings.py
